<resources>
    <string name="app_name">Test</string>
    <string name="text_view_name">Discovery Modules Recommendation</string>
    <string name="title_activity_login">Discovery Modules Recommendation</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username(Email)</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repassword">Confirm password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
